correction orthographe index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</section>
 
 				<section>
-					<h2>Autre connaissances</h2>
+					<h2>Autres connaissances</h2>
 					<ul>
 						<li>Travail collaboratif</li>
 						<li>Conception UML</li>
@@ -62,7 +62,7 @@
 			
 			<div class="bloc">
 				<section>
-					<h2>Formation</h2>
+					<h2>Formations</h2>
 						
 						<h4>LICENCE PROFESSIONNELLE Métiers de l'Informatique - Applications Web)</h4>
 							<ul> 
@@ -85,7 +85,7 @@
 				</section>
 
 				<section>
-					<h2>Expérience</h2>
+					<h2>Expériences</h2>
 					<h3>Stage Makina Corpus à Toulouse (développeur back-end)</h3>
 					<ul> 
 						<li>Inventaire et restitution de la liste des plugins Leaflet sur une page web</li>
@@ -96,7 +96,7 @@
 						<li>Accueil des étudiants</li>
 						<li>Inventaire numérique</li>
 					</ul>
-					<h2>Centres d’intérêt</h2>
+					<h2>Centres d’intérêts</h2>
 					<ul>
 						<li>Informatique</li>
 						<li>Développement web</li>
@@ -124,3 +124,4 @@
 	</body>
 
 </html>
+
